# tinyesp

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
